Header z-index fixes and responsiveness

--- a/src/components/FullDropdown/FullDropdown.scss
+++ b/src/components/FullDropdown/FullDropdown.scss
@@ -21,7 +21,7 @@
     transition: height 250ms;
     background: white;
     overflow: hidden;
-    z-index: 15;
+    z-index: 50;
   }
 
   &.active {
