--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,11 @@
+@import '../../utils/variables';
+
 .header {
   position: fixed;
   top: 0;
   width: 100%;
   height: 42pt;
-  z-index: 40;
+  z-index: 60;
   background-color: var(--primary-color);
 
   .container {
@@ -28,6 +30,19 @@
     border: 0;
     border-radius: 3pt;
     fill: white;
+    cursor: pointer;
+
+    &[name="nav"] {
+
+      @media #{$tablet} {
+        display: none;
+      }
+
+    }
+
+    &:active {
+      background: rgba(black, .2);
+    }
 
     + .button {
       margin-left: 6pt;
