--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -20,7 +20,7 @@
   right: 10px;
   bottom: 10px;
   display: flex;
-  z-index: 50;
+  z-index: 40;
 
   .button {
     display: flex;
